--- a/style.css
+++ b/style.css
@@ -244,7 +244,8 @@ main {
 /* Form */
 
 form {
-  /* display: none; To hide the form */
+  /* To hide the form */
+  /* display: none; */
   width: 500px;
   margin: 50px auto;
   text-align: center;
@@ -252,4 +253,48 @@ form {
   border: 1px solid #ddd;
   border-radius: 10px;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+input[type="text"],
+input[type="number"],
+select {
+  width: 90%;
+  padding: 12px;
+  font-size: 16px;
+  margin-top: 8px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+  outline: none;
+  transition: 0.3s;
+  margin-bottom: 10px;
+}
+
+input[type="text"]:focus,
+input[type="number"]:focus,
+select:focus {
+  border-color: solid 1px #333;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+label {
+  font-size: 18px;
+  margin-bottom: 10px;
+  display: block;
+}
+
+input[type="submit"] {
+  width: 100%;
+  padding: 12px 20px;
+  font-size: 18px;
+  margin-top: 20px;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #444;
 }
